--- a/HTML-CSS-COURSE/stylesYoutube/video.css
+++ b/HTML-CSS-COURSE/stylesYoutube/video.css
@@ -38,40 +38,42 @@
 .profile-picture{
   width: 36px;
   border-radius: 50px;
+  position: relative;
+  cursor: pointer;
   
 }
-.profile-view:hover{
+.tooltip2{
   display: flex;
   flex-direction: row;
-
-  justify-content: center;
   align-items: center;
-
   position: relative;
-  top: 5px;
-  right: 0;
-
+  top: -3px;
   width: 200px;
-  height: 50px;
-  border-radius: 8px;
-  border: none;
-  box-shadow: 0px 0px 5px rgb(96, 96, 96);
-  background-color: white;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  height: 80px;
+  border-radius: 5px;
+  background-color:rgb(255, 255, 255);
+  opacity: 0;
+  box-shadow: 2px 1px 3px rgb(96, 96, 96);
+  opacity: 0;
+  transition: opacity 1s;
+  white-space: nowrap;
   padding-left: 10px;
-  padding-right: 10px;
 }
-.profile-view-picture{
-  width: 50px;
-  border-radius: 30px;
-  margin-left: 0px;
-  margin-right: 10px;
-}
+.tooltip2:hover {
+  opacity: 1;
 
-.profile-view-info p{
-  font-family: Arial;
+}
+.profile-picture-preview{
+  width: 60px;
+  border-radius: 50px;
   
+}
+.channel-preview{
+  padding-left: 8px;
+}
+.profile-picture :hover .tooltip{
+  cursor: pointer;
+  opacity: 1;
 }
 .name{
   font-size: 16px;
@@ -89,21 +91,43 @@
   row-gap: 40px;
   
 }
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 751px) and (min-width:999px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1000px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.image{
+  position: relative;
+}
 .video-time{
   font-family: arial;
   font-size: 12px;
   font-weight: 500;
   vertical-align: middle;
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding: 4px;
   border-radius: 2px;
   width: 30px;
   background-color: black;
   opacity: 0.9;
   color: white;
   position: relative;
-  bottom: 27px;
-  left: 145px;
+  bottom: 30px;
+  left: 5px;
 }
+
+.image:hover{
+  border-radius: 10px;
+ 
+}
+
